--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bulma": "^0.5.1",
     "font-awesome": "^4.7.0",
     "trae": "^1.4.2",
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
