Vuex: creado el 'store', ejemplo de 'mutations' y 'actions' sin promesas

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 // modules desactivado ya que lo resuelve webpack
 {
   "presets": [
-    ["env", { "modules": false }]
+    ["env", { "modules": false }],
+    ["stage-2"]
   ]
 }
