--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "start": "serve --single"
   },
   "dependencies": {
     "bulma": "^0.5.1",
     "font-awesome": "^4.7.0",
+    "serve": "^6.3.1",
     "trae": "^1.4.2",
     "vue": "^2.3.3",
     "vue-router": "^2.7.0",
