--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve": "^6.3.1",
     "trae": "^1.4.2",
     "vue": "^2.3.3",
+    "vue-i18n": "^7.3.2",
     "vue-router": "^2.7.0",
     "vuex": "^3.0.0"
   },
